--- a/SimpleChat.Server/Web.config
+++ b/SimpleChat.Server/Web.config
@@ -51,6 +51,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="SimpleChatEntities" connectionString="metadata=res://*/ChatAuditModel.csdl|res://*/ChatAuditModel.ssdl|res://*/ChatAuditModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=shrek\sqlexpress;initial catalog=SimpleChat;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="SimpleChatEntities" connectionString="metadata=res://*/ChatAuditModel.csdl|res://*/ChatAuditModel.ssdl|res://*/ChatAuditModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\sqlexpress;initial catalog=SimpleChat;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
